--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "type":"module",
+  "type": "module",
   "description": "AI-Powered Resume Ranking and Hiring System",
   "main": "index.js",
   "scripts": {
@@ -10,11 +10,14 @@
   "author": "Mahender Singh",
   "license": "ISC",
   "dependencies": {
+    "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.14.1"
   }
 }
